# hockey-blast-sportsbook

./: .env.example  .flake8  .gitignore  AGENTS.md  DESIGN.md  FRONTEND_RESEARCH.md  PLAN_TEAM_CONNECT.md  README.md  ROADMAP.md  WORK_IN_PROGRESS.md  alembic.ini  cert.pem  deploy.sh  gunicorn_config.py  key.pem  package-lock.json  pull_and_deploy.sh  pyproject.toml  rebuild_and_restart.sh  requirements-dev.txt  requirements.txt  run_dev.py  run_with_restart.sh  server.crt  server.key  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  constants.py  db.py
app/auth/: admin_required.py  jwt_validator.py  routes.py
app/blueprints/: admin.py  chat.py  fantasy.py  games.py  identity.py  leagues.py  picks.py  preferences.py  standings.py  team_connect.py
app/jobs/: grade_results.py
app/models/: __init__.py  base.py  chat_feedback.py  chat_message.py  chat_violation.py  fantasy_draft_queue.py  fantasy_game_scores.py  fantasy_league.py  fantasy_manager.py  fantasy_manager_queue.py  fantasy_roster.py  fantasy_standings.py  fantasy_trade_round.py  fantasy_trade_turn.py  game_prediction_log.py  pred_league.py  pred_league_member.py  pred_league_standings.py  pred_notification.py  pred_pick.py  pred_result.py  pred_roster_invite.py  pred_sub_request.py  pred_sub_response.py  pred_user.py  pred_user_captain_claim.py  pred_user_hb_claim.py  pred_user_preferences.py  site_event.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
migrations/: env.py
scripts/: reset_users.py  triage_feedback.py
tests/: conftest.py
(+93 files in other folders)
